# models/dto/request/authDto/userLoginRequest.go
@@ -1,0 +1,6 @@
+package authDto
+
+type UserLoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
