# models/successResponseDto.go
@@ -1,0 +1,7 @@
+package models
+
+type SuccessResponseDto struct {
+	Success   bool        `json:"success"`
+	Message   interface{} `json:"message"`
+	Data      interface{}   `json:"data"`
+}
