# routes/routes.go
@@ -10,11 +10,18 @@ import (
 func Setup(app *fiber.App) {
 	// Add endpoint to serve swagger documentation
 	app.Get("/swagger/*", swagger.Handler) // default
-
 	app.Get("/swagger/*", swagger.New(swagger.Config{ // custom
 		URL: "http://example.com/doc.json",
 		DeepLinking: false,
 	}))
+
+	mainApi := app.Group("/api")
+
+	// Auth Endpoint
+	v1 := mainApi.Group("/v1")
+	v1.Post("/register", controllers.Register)
+	v1.Post("/login", controllers.Login)
+	// End of Auth Endpoint
 
 	app.Get("/", controllers.HelloWorld)
 	app.Post("/this-is-our-new-api", controllers.PostHelloWorld)
